--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -10,7 +10,7 @@
       apt:
         name: docker.io
     - name: Deploy Docker Container
-      command: docker run -itd --name capstone01 -p 8084:8081 laxg66/capstone01:v1
+      command: docker run -itd --name capstone01 -p 8084:8081 abhis2024/finance_app:${env.TIMESTAMP}
 
     - name: getting node exporter
       shell: |
@@ -25,7 +25,7 @@
         dest: /home/ubuntu/prometheus.yml
     
     - name: run prometheus container
-      command: docker run -d -p 9090:9090 --name prometheus -v /home/ubuntu/prometheus.yml:/etc/prometheus/prometheus.yml prom/prometheus
+      command: docker run -d -p 9696:9696 --name prometheus -v /home/ubuntu/prometheus.yml:/etc/prometheus/prometheus.yml prom/prometheus
 
     - name: run grafana container
-      command: docker run -d -p 3000:3000 --name grafana grafana/grafana
+      command: docker run -d -p 7007:7007 --name grafana grafana/grafana
